hompage link tweak

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "homepage": "https://K3nLin.github.io/K3nLin.github.io/",
+  "homepage": "https://K3nLin.github.io/K3nLin.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
